<resources>
    <string name="app_name">Deer</string>
    <string name="register_login_info">The app is based on anonymity therefore the login/register process doesn\'t require eligible information, you may complete the email field with anything you want. No confirmation needed!</string>


    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="long_text">Can I tell you something just between you and me? When I hear your voice, I know I\'m finally free Every single word is perfect as it can be And I need you here with me When you lift me up, I know that I\'ll never fall I can speak to you by saying nothing at all Every single time, I find it harder to breathe \'Cause I need you here with me</string>

</resources>
